--- a/package.json
+++ b/package.json
@@ -11,6 +11,35 @@
     "node": "^6.0.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.11.4",
+    "babel-polyfill": "^6.9.1",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "backstopjs": "^2.0.4",
+    "bower": "^1.7.9",
+    "browser-sync": "^2.17.3",
+    "eslint": "^3.6.1",
+    "eslint-config-standard": "^6.2.0",
+    "eslint-plugin-promise": "^3.0.0",
+    "eslint-plugin-standard": "^2.0.1",
+    "gulp": "^3.9.1",
+    "html-minifier-cli": "^0.1.0",
+    "html-validator-cli": "^3.0.1",
+    "husky": "^0.11.9",
+    "imagemin-cli": "^3.0.0",
+    "kouto-swiss": "^0.13.1",
+    "milligram-stylus": "^1.0.0",
+    "npm-check": "^5.2.3",
+    "npm-run-all": "^3.1.0",
+    "onchange": "^3.0.2",
+    "opn-cli": "^3.1.0",
+    "plato": "^1.7.0",
+    "pug": "^2.0.0-beta6",
+    "rupture": "^0.6.2",
+    "sitespeed.io": "^3.11.8",
+    "stylus": "^0.54.5",
+    "svgo": "^0.7.1",
+    "uglify-js": "^2.6.2"
   },
   "scripts": {
   }
