Add npm scripts for task automation

--- a/package.json
+++ b/package.json
@@ -42,5 +42,41 @@
     "uglify-js": "^2.6.2"
   },
   "scripts": {
+    "start": "run-s build watch",
+    "clean": "rm -rf dist && mkdir dist",
+    "postinstall": "bower install",
+    "prestart": "npm install",
+    "pretest": "npm install",
+    "prepush": "npm install && npm run build && chmod +x tasks/publish/prepush.sh && tasks/publish/prepush.sh",
+    "build:templates:jade": "node tasks/templates/render.js",
+    "build:templates:validator": "html-validator --file=src/index.html --verbose --format=gnu",
+    "build:templates": "run-s build:templates:jade build:templates:validator && cp -rf src/manifest.json dist",
+    "build:styles:stylus": "mkdir -p dist/styles && stylus -c src/styles/main.styl -o dist/styles/main.min.css -u rupture",
+    "build:styles:lint": "stylint --config .styluslintrc src/styles/*styl",
+    "build:styles": "run-s build:styles:lint build:styles:stylus",
+    "build:scripts:babel": "babel -p -d node_modules/.babel-cache src/scripts",
+    "build:scripts:uglify": "mkdir -p dist/scripts && uglifyjs node_modules/.babel-cache/*.js -m -c -o dist/scripts/main.min.js && rm -rf node_modules/.babel-cache",
+    "build:scripts:eslint": "eslint -c .eslintrc src/scripts",
+    "build:scripts": "run-s build:scripts:eslint build:scripts:babel build:scripts:uglify",
+    "build:images:imagemin": "imagemin src/images/* -o dist/images",
+    "build:images:svgo": "svgo -f src/images && mkdir -p dist/images ",
+    "build:images": "run-s build:images:imagemin build:images:svgo",
+    "build:vendor": "cp -rf src/vendor dist",
+    "serve": "browser-sync start -s dist -f dist",
+    "build": "run-s clean build:templates build:scripts build:images build:styles build:vendor",
+    "watch:templates": "onchange 'src/templates' 'src/config.json' -- npm run build:templates",
+    "watch:styles": "onchange 'src/styles' -- npm run build:styles",
+    "watch:scripts": "onchange 'src/scripts' -- npm run build:scripts",
+    "watch:images": "onchange 'src/images' -- npm run build:images",
+    "watch:vendors": "onchange 'src/vendor' -- npm run build:vendors",
+    "watch": "run-p watch:templates watch:styles watch:scripts watch:images watch:vendors serve",
+    "test:complexity:plato": "plato -r -d test/complexity -l .eslintrc -t 'Code Complexity Tool' -x .json src/scripts/*.js && opn test/complexity/index.html",
+    "test:complexity": "run-s plato",
+    "test:perf:sitespeedio": "sitespeed.io -u https://blaugame.com -r test/perf --suppressDomainFolder",
+    "test:perf": "run-s sitespeedio",
+    "test:regression:reference": "gulp --gulpfile node_modules/backstopjs/gulpfile.js reference --configPath=../../backstop.conf.js",
+    "test:regression:compare": "run-s build && gulp --gulpfile node_modules/backstopjs/gulpfile.js test --configPath=../../backstop.conf.js",
+    "test:regression": "run-p serve compare",
+    "test:npm": "npm-check -u"
   }
 }
