Redo GH Pages deploy task in plain JS

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint-config-standard": "^6.2.0",
     "eslint-plugin-promise": "^3.0.0",
     "eslint-plugin-standard": "^2.0.1",
+    "gh-pages": "^0.11.0",
     "gulp": "^3.9.1",
     "html-minifier-cli": "^0.1.0",
     "html-validator-cli": "^3.0.1",
@@ -47,7 +48,7 @@
     "postinstall": "bower install",
     "prestart": "npm install",
     "pretest": "npm install",
-    "prepush": "npm install && npm run build && chmod +x tasks/publish/prepush.sh && tasks/publish/prepush.sh",
+    "deploy":"node tasks/publish/deploy-gh-pages.js",
     "build:templates:jade": "node tasks/templates/render.js",
     "build:templates:validator": "html-validator --file=dist/index.html --verbose --format=gnu",
     "build:templates": "run-s build:templates:jade build:templates:validator && cp -rf src/manifest.json dist",
