Better automation scripts

--- a/package.json
+++ b/package.json
@@ -48,10 +48,10 @@
     "postinstall": "bower install",
     "prestart": "npm install",
     "pretest": "npm install",
-    "deploy":"node tasks/publish/deploy-gh-pages.js",
-    "build:templates:jade": "node tasks/templates/render.js",
+    "deploy":"node tasks/deploy/gh-pages.js",
+    "build:templates:pug": "node tasks/templates/compiler.js",
     "build:templates:validator": "html-validator --file=dist/index.html --verbose --format=gnu",
-    "build:templates": "run-s build:templates:jade build:templates:validator && cp -rf src/manifest.json dist",
+    "build:templates": "run-s build:templates:pug build:templates:validator && cp -rf src/manifest.json dist",
     "build:styles:stylus": "mkdir -p dist/styles && stylus -c src/styles/main.styl -o dist/styles/main.min.css -u rupture",
     "build:styles:lint": "stylint --config .styluslintrc src/styles/*styl",
     "build:styles": "run-s build:styles:lint build:styles:stylus",
