--- a/package.json
+++ b/package.json
@@ -48,29 +48,30 @@
     "postinstall": "bower install",
     "prestart": "npm install",
     "pretest": "npm install",
-    "deploy":"node tasks/deploy/gh-pages.js",
     "build:templates:pug": "node tasks/templates/compiler.js",
     "build:templates:validator": "html-validator --file=dist/index.html --verbose --format=gnu",
     "build:templates": "run-s build:templates:pug build:templates:validator && cp -rf src/manifest.json dist",
-    "build:styles:stylus": "mkdir -p dist/styles && stylus -c src/styles/main.styl -o dist/styles/main.min.css -u rupture",
-    "build:styles:lint": "stylint --config .styluslintrc src/styles/*styl",
-    "build:styles": "run-s build:styles:lint build:styles:stylus",
     "build:scripts:babel": "babel -p -d node_modules/.babel-cache src/scripts",
     "build:scripts:uglify": "mkdir -p dist/scripts && uglifyjs node_modules/.babel-cache/*.js -m -c -o dist/scripts/main.min.js && rm -rf node_modules/.babel-cache",
     "build:scripts:eslint": "eslint -c .eslintrc src/scripts",
     "build:scripts": "run-s build:scripts:eslint build:scripts:babel build:scripts:uglify",
+    "build:styles:stylus": "mkdir -p dist/styles && stylus -c src/styles/main.styl -o dist/styles/main.min.css -u rupture",
+    "build:styles:lint": "stylint --config .styluslintrc src/styles/*styl",
+    "build:styles": "run-s build:styles:lint build:styles:stylus",
+    "build:vendor": "cp -rf src/vendor dist",
     "build:images:imagemin": "imagemin src/images/* -o dist/images",
     "build:images:svgo": "svgo -f src/images && mkdir -p dist/images ",
     "build:images": "run-s build:images:imagemin build:images:svgo",
-    "build:vendor": "cp -rf src/vendor dist",
-    "serve": "browser-sync start -s dist -f dist",
-    "build": "run-s clean build:templates build:scripts build:images build:styles build:vendor",
+    "build:videos": "mkdir -p dist/videos && cp -rf src/videos dist/videos",    
+    "build": "run-s clean build:templates build:scripts build:styles build:vendor build:images build:videos",
     "watch:templates": "onchange 'src/templates' 'src/config.json' -- npm run build:templates",
-    "watch:styles": "onchange 'src/styles' -- npm run build:styles",
     "watch:scripts": "onchange 'src/scripts' -- npm run build:scripts",
+    "watch:styles": "onchange 'src/styles' -- npm run build:styles",
+    "watch:vendor": "onchange 'src/vendor' -- npm run build:vendor",
     "watch:images": "onchange 'src/images' -- npm run build:images",
-    "watch:vendors": "onchange 'src/vendor' -- npm run build:vendors",
-    "watch": "run-p watch:templates watch:styles watch:scripts watch:images watch:vendors serve",
+    "watch:videos": "onchange 'src/videos' -- npm run build:videos",    
+    "watch": "run-p watch:templates watch:styles watch:scripts watch:images watch:vendor serve",
+    "serve": "browser-sync start -s dist -f dist",
     "test:complexity:plato": "plato -r -d test/complexity -l .eslintrc -t 'Code Complexity Tool' -x .json src/scripts/*.js && opn test/complexity/index.html",
     "test:complexity": "run-s plato",
     "test:perf:sitespeedio": "sitespeed.io -u https://blaugame.com -r test/perf --suppressDomainFolder",
@@ -78,6 +79,8 @@
     "test:regression:reference": "gulp --gulpfile node_modules/backstopjs/gulpfile.js reference --configPath=../../backstop.conf.js",
     "test:regression:compare": "run-s build && gulp --gulpfile node_modules/backstopjs/gulpfile.js test --configPath=../../backstop.conf.js",
     "test:regression": "run-p serve compare",
-    "test:npm": "npm-check -u"
+    "test:npm": "npm-check -u",
+    "test":"npm run build",
+    "deploy":"node tasks/deploy/gh-pages.js"
   }
 }
