Update videos building task and add docs building one

--- a/package.json
+++ b/package.json
@@ -62,16 +62,18 @@
     "build:images:imagemin": "imagemin src/images/* -o dist/images",
     "build:images:svgo": "svgo -f src/images && mkdir -p dist/images ",
     "build:images": "run-s build:images:imagemin build:images:svgo",
-    "build:videos": "mkdir -p dist/videos && cp -rf src/videos dist/videos",    
-    "build": "run-s clean build:templates build:scripts build:styles build:vendor build:images build:videos",
+    "build:videos": "mkdir -p dist/videos && cp -rf src/videos dist", 
+    "build:docs": "cp -rf *.md dist",        
+    "build": "run-s clean build:templates build:scripts build:styles build:vendor build:images build:videos build:docs",
+    "serve": "browser-sync start -s dist -f dist",
     "watch:templates": "onchange 'src/templates' 'src/config.json' -- npm run build:templates",
     "watch:scripts": "onchange 'src/scripts' -- npm run build:scripts",
     "watch:styles": "onchange 'src/styles' -- npm run build:styles",
     "watch:vendor": "onchange 'src/vendor' -- npm run build:vendor",
     "watch:images": "onchange 'src/images' -- npm run build:images",
     "watch:videos": "onchange 'src/videos' -- npm run build:videos",    
-    "watch": "run-p watch:templates watch:styles watch:scripts watch:images watch:vendor serve",
-    "serve": "browser-sync start -s dist -f dist",
+    "watch:docs": "onchange '*.md' -- npm run build:docs",    
+    "watch": "run-p watch:templates watch:scripts watch:styles watch:vendor watch:images watch:videos watch:docs serve",
     "test:complexity:plato": "plato -r -d test/complexity -l .eslintrc -t 'Code Complexity Tool' -x .json src/scripts/*.js && opn test/complexity/index.html",
     "test:complexity": "run-s plato",
     "test:perf:sitespeedio": "sitespeed.io -u https://blaugame.com -r test/perf --suppressDomainFolder",
