Add gh pages domain config task

--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
     "build:images": "run-s build:images:imagemin build:images:svgo",
     "build:videos": "mkdir -p dist/videos && cp -rf src/videos dist",
     "build:docs": "cp -rf *.md dist",
-    "build": "run-s clean build:templates build:scripts build:styles build:vendor build:images build:videos build:docs",
+    "build:domainConfig": "echo blaugame.com > dist/CNAME",
+    "build": "run-s clean build:templates build:scripts build:styles build:vendor build:images build:videos build:docs build:domainConfig",
     "serve": "browser-sync start -s dist -f dist",
     "watch:templates": "onchange 'src/templates' 'src/config.json' -- npm run build:templates",
     "watch:scripts": "onchange 'src/scripts' -- npm run build:scripts",
