Fix and update all testing scripts

--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "eslint-plugin-promise": "^3.0.0",
     "eslint-plugin-standard": "^2.0.1",
     "gh-pages": "^0.11.0",
-    "gulp": "^3.9.1",
     "html-minifier-cli": "^0.1.0",
     "html-validator-cli": "^3.0.1",
     "husky": "^0.11.9",
@@ -76,13 +75,13 @@
     "watch:videos": "onchange 'src/videos' -- npm run build:videos",
     "watch:docs": "onchange '*.md' -- npm run build:docs",
     "watch": "run-p watch:templates watch:scripts watch:styles watch:vendor watch:images watch:videos watch:docs serve",
-    "test:complexity:plato": "plato -r -d test/complexity -l .eslintrc -t 'Code Complexity Tool' -x .json src/scripts/*.js && opn test/complexity/index.html",
-    "test:complexity": "run-s plato",
-    "test:perf:sitespeedio": "sitespeed.io -u https://blaugame.com -r test/perf --suppressDomainFolder",
-    "test:perf": "run-s sitespeedio",
-    "test:regression:reference": "gulp --gulpfile node_modules/backstopjs/gulpfile.js reference --configPath=../../backstop.conf.js",
-    "test:regression:compare": "run-s build && gulp --gulpfile node_modules/backstopjs/gulpfile.js test --configPath=../../backstop.conf.js",
-    "test:regression": "run-p serve compare",
+    "test:complexity:plato": "plato -r -d test/complexity -e .eslintrc -t 'Code Complexity Tool' -x .json src/scripts/*.js && opn test/complexity/index.html",
+    "test:complexity": "run-s test:complexity:plato",
+    "test:perf:sitespeedio": "sitespeed.io -u http://localhost:3000 -r test/perf --suppressDomainFolder",
+    "test:perf": "run-s test:perf:sitespeedio",
+    "test:regression:reference": "backstop reference",
+    "test:regression:compare": "backstop test",
+    "test:regression": "run-s serve & run-s test:regression:reference && run-s test:regression:compare",
     "test:npm": "npm-check -u",
     "test": "npm run build",
     "deploy": "node tasks/deploy/gh-pages.js"
